src/objects/Type_de_casier__c.object
<CustomObject>
    <fields>
        <fullName>Coef_ajustement__c</fullName>
        <label>Coef Ajustement</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modele__c</fullName>
        <label>Modèle</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_MDL</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moyenne__c</fullName>
        <label>Moyenne</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Poids_max__c</fullName>
        <label>Poids max</label>
        <precision>15</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Type de casier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Modele__c</columns>
        <columns>Maximum__c</columns>
        <columns>Minimum__c</columns>
        <columns>Moyenne__c</columns>
        <columns>Coef_ajustement__c</columns>
        <columns>Poids_max__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Nom de Type de casier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Types de casier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>